--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
     <title>Document</title>
 </head>
 <body> 
+    <div class="container-page flex">
+        <aside class="aside-div">
+            <div class="flex justify-around div-logo">
+                <a class="logo transition-property" href="index.html"><span>design.</span>today</a>
+                <a href="#"><img src="images/icons/burger-icon.png" alt="burger-icon"></a>
+            </div>
+            <div>
+                <nav>
+                    <ul>
+                       <li><a href="#"><img src="images/icons/home.png" alt="home-logo"> Home</a></li>
+                       <li><a href="#"><img src="images/icons/explore.png" alt="explore-logo">Explore</a></li>
+                       <li><a href="#"><img src="images/icons/folders1.png" alt="folder-icon">Folders</a></li>
+                       <li><a href="#"><img src="images/icons/favourites1.png" alt="favourites-icon">Favourites</a></li>
+                       <li><a href="#"><img src="images/icons/activities1.png" alt="activites-icon">Activites</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </aside>
+    </div>
 </body>
 </html>
