update navigation styles

--- a/index.html
+++ b/index.html
@@ -18,15 +18,36 @@
             <div>
                 <nav>
                     <ul>
-                       <li><a href="#"><img src="images/icons/home.png" alt="home-logo"> Home</a></li>
-                       <li><a href="#"><img src="images/icons/explore.png" alt="explore-logo">Explore</a></li>
-                       <li><a href="#"><img src="images/icons/folders1.png" alt="folder-icon">Folders</a></li>
-                       <li><a href="#"><img src="images/icons/favourites1.png" alt="favourites-icon">Favourites</a></li>
-                       <li><a href="#"><img src="images/icons/activities1.png" alt="activites-icon">Activites</a></li>
+                        <li class="nav-li">
+                            <a class="font-size-color"href="#">
+                                 <img src="images/icons/home.png" alt="home-icon">Home
+                            </a>
+                        </li>
+                        <li class="nav-li">
+                           <a class="font-size-color"href="#">
+                               <img src="images/icons/explore.png" alt="explore-icon">Explore
+                            </a>
+                        </li>
+                        <li class="nav-li">
+                            <a class="font-size-color"href="#">
+                               <img src="images/icons/folders1.png" alt="folder-icon">Folders
+                            </a>
+                        </li>
+                        <li class="nav-li">
+                            <a class="font-size-color"href="#">
+                               <img src="images/icons/favourites1.png" alt="fav-icon">Favourites
+                            </a>
+                        </li>
+                        <li class="nav-li">
+                            <a class="font-size-color"href="#">
+                               <img src="images/icons/activities1.png" alt="avtivites-icon">Activites
+                            </a>
+                        </li>
                     </ul>
                 </nav>
             </div>
         </aside>
+        <div class="main-page"></div>
     </div>
 </body>
 </html>
