added aside styles

--- a/index.html
+++ b/index.html
@@ -15,36 +15,67 @@
                 <a class="logo transition-property" href="index.html"><span>design.</span>today</a>
                 <a href="#"><img src="images/icons/burger-icon.png" alt="burger-icon"></a>
             </div>
-            <div>
+            <div class="container-aside">
                 <nav>
                     <ul>
                         <li class="nav-li">
-                            <a class="font-size-color"href="#">
-                                 <img src="images/icons/home.png" alt="home-icon">Home
+                            <a class="medium-size16-colorfff"href="#">
+                                 <img src="images/icons/home.png" alt="home">Home
                             </a>
                         </li>
                         <li class="nav-li">
-                           <a class="font-size-color"href="#">
-                               <img src="images/icons/explore.png" alt="explore-icon">Explore
+                           <a class="medium-size16-colorfff"href="#">
+                               <img src="images/icons/explore.png" alt="explore">Explore
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="font-size-color"href="#">
-                               <img src="images/icons/folders1.png" alt="folder-icon">Folders
+                            <a class="medium-size16-colorfff"href="#">
+                               <img src="images/icons/folders1.png" alt="folder">Folders
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="font-size-color"href="#">
-                               <img src="images/icons/favourites1.png" alt="fav-icon">Favourites
+                            <a class="medium-size16-colorfff"href="#">
+                               <img src="images/icons/favourites1.png" alt="favourites">Favourites
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="font-size-color"href="#">
-                               <img src="images/icons/activities1.png" alt="avtivites-icon">Activites
+                            <a class="medium-size16-colorfff"href="#">
+                               <img src="images/icons/activities1.png" alt="avtivites">Activites
                             </a>
                         </li>
                     </ul>
                 </nav>
+            </div>
+            <div class="aside-bottom container-aside">
+                <h3 class="uppercase">following</h3>
+                <ul>
+                   <li>
+                       <a class="medium-size16-colorfff" href="#">
+                           <img src="images/persons/sajon.png" alt="sajon">Sajon
+                        </a>
+                    </li>
+                   <li>
+                       <a class="medium-size16-colorfff"href="#">
+                           <img src="images/persons/tran-mau.png" alt="tran">Tran Mau Tri Tam
+                        </a>
+                    </li>
+                   <li>
+                       <a class="medium-size16-colorfff"href="#">
+                           <img src="images/persons/ghani.png" alt="ghani">Ghani Pradita
+                        </a>
+                    </li>
+                   <li>
+                       <a class="medium-size16-colorfff"href="#">
+                           <img src="images/persons/david.png" alt="david">David Kovalev
+                        </a>
+                    </li>
+                   <li>
+                       <a class="medium-size16-colorfff"href="#">
+                           <img src="images/persons/ryan.png" alt="ryan">Ryan Putnam
+                        </a>
+                    </li>
+                </ul>
+                <button>loadmore (15)</button>
             </div>
         </aside>
         <div class="main-page"></div>
