added header, styles and second page

--- a/sec-page.html
+++ b/sec-page.html
@@ -94,7 +94,9 @@
                     <div class="relative">
                        <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
                     </div>
-                    <a href="sec-page.html"><img src="images/persons/Group 33.png" alt="photo"> </a>
+                    <div class="div-person flex">
+                       <a href="index.html"><img src="images/icons/Group 79.png" alt="photo"> </a>
+                    </div>
                     <button class="uppercase upload">upload</button>
                 </div>
             </header>
