add section and styles

--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
                     <ul>
                         <li class="nav-li">
                             <a class="medium-size16-colorfff"href="#">
-                                 <img src="images/icons/home.png" alt="home">Home
+                                 <img class="vertical-align"src="images/icons/home.png" alt="home">Home
                             </a>
                         </li>
                         <li class="nav-li">
                            <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/explore.png" alt="explore">Explore
+                               <img class="vertical-align"src="images/icons/explore.png" alt="explore">Explore
                             </a>
                         </li>
                         <li class="nav-li">
                             <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/folders1.png" alt="folder">Folders
+                               <img class="vertical-align"src="images/icons/folders1.png" alt="folder">Folders
                             </a>
                         </li>
                         <li class="nav-li">
                             <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/favourites1.png" alt="favourites">Favourites
+                               <img class="vertical-align"src="images/icons/favourites1.png" alt="favourites">Favourites
                             </a>
                         </li>
                         <li class="nav-li">
                             <a class="medium-size16-colorfff"href="#">
-                               <img src="images/icons/activities1.png" alt="avtivites">Activites
+                               <img class="vertical-align"src="images/icons/activities1.png" alt="avtivites">Activites
                             </a>
                         </li>
                     </ul>
@@ -51,27 +51,27 @@
                 <ul>
                    <li>
                        <a class="medium-size16-colorfff" href="#">
-                           <img src="images/persons/sajon.png" alt="sajon">Sajon
+                           <img class="vertical-align" src="images/persons/sajon.png" alt="sajon">Sajon
                         </a>
                     </li>
                    <li>
                        <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/tran-mau.png" alt="tran">Tran Mau Tri Tam
+                           <img class="vertical-align"src="images/persons/tran-mau.png" alt="tran">Tran Mau Tri Tam
                         </a>
                     </li>
                    <li>
                        <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/ghani.png" alt="ghani">Ghani Pradita
+                           <img class="vertical-align"src="images/persons/ghani.png" alt="ghani">Ghani Pradita
                         </a>
                     </li>
                    <li>
                        <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/david.png" alt="david">David Kovalev
+                           <img class="vertical-align"src="images/persons/david.png" alt="david">David Kovalev
                         </a>
                     </li>
                    <li>
                        <a class="medium-size16-colorfff"href="#">
-                           <img src="images/persons/ryan.png" alt="ryan">Ryan Putnam
+                           <img class="vertical-align"src="images/persons/ryan.png" alt="ryan">Ryan Putnam
                         </a>
                     </li>
                 </ul>
@@ -98,6 +98,100 @@
                     <button class="uppercase upload">upload</button>
                 </div>
             </header>
+            <main>
+                <section class="container">
+                    <div class="flex jc-between ai-center"> 
+                        <div class="flex">
+                            <div class="list-div">
+                                <a class="book-size16-color222 capitalize"href="">all</a>
+                            </div>
+                            <div class="list-div witdh">
+                                <a class="book-size16-color222 capitalize"href="">web design</a>
+                            </div>
+                            <div class="list-div">
+                                <a class="book-size16-color222 uppercase"href="">3D</a>
+                            </div>
+                            <div class="list-div witdh">
+                                <a class="book-size16-color222 capitalize"href="">app design</a>
+                            </div>
+                            <div class="list-div witdh">
+                                <a class="book-size16-color222 capitalize"href="">animation</a>
+                            </div>
+                            <div class="list-div witdh">
+                                <a class="book-size16-color222 capitalize"href="">ilustration</a>
+                            </div>
+                            <div class="list-div">
+                                <a class="book-size16-color222 capitalize"href="">typography</a>
+                            </div>
+                        </div>
+                        <div class="buttom-filter-div">
+                            <img class="vertical-align"src="images/icons/filter.png" alt="filter">
+                            <button class="buttom-filter capitalize">filters</button>
+                        </div>
+                    </div>
+                    <div class="flex jc-between wrap">
+                        <div class="main-img-div flex wrap relative">
+                            <a href="#">
+                                <img class="main-img"src="images/basic images/UI components for unity gaming.png" alt="">
+                                <h4>UI Components for Unity Gaming</h4>
+                            </a>
+                        </div>
+                        <div class="main-img-div flex wrap relative">
+                            <a href="#">
+                                <img src="images/basic images/Analytics mobile app.png" alt="">
+                                <h4>Analytics Mobile App – Blurr Series</h4>
+                            </a>
+                        </div>
+                        <div class="main-img-div flex wrap relative">
+                            <a href="#">
+                                <img src="images/basic images/estaro dark-mode.png" alt="">
+                                <h4>Estaro – Dark-mode – Task Management App</h4>
+                            </a>
+                        </div>
+                        <div class="main-img-div flex wrap relative">
+                            <a href="#">
+                                <img class="main-img"src="images/basic images/live streaming.png" alt="">
+                                <h4>Live streaming application for gamers.</h4>
+                            </a>
+                        </div>
+                        <div class="main-img-div flex wrap relative">
+                            <a href="#">
+                                <img src="images/basic images/dark mockup.png" alt="">
+                                <h4>Dark Mockup for Unity Gaming</h4>
+                            </a>
+                        </div>
+                        <div class="main-img-div flex wrap relative">
+                            <a href="#">
+                                <img src="images/basic images/smm-social media managment.png" alt="">
+                                <h4>SMM – Social Media Management – App UI</h4>
+                            </a>
+                        </div>
+                        <div class="main-img-div flex wrap relative">
+                            <a href="#">
+                                <img src="images/basic images/food app.png" alt="">
+                                <h4>Food App 2.0</h4>
+                            </a>
+                        </div>
+                        <div class="main-img-div  flex wrap relative">
+                            <a href="#">
+                                <img src="images/basic images/live straming application for gamers.png" alt="">
+                                <h4>Live streaming application for gamers.</h4>
+                            </a>
+                            <div class="icon-on-imgdiv flex">
+                                <div>
+                                    <img src="images/icons/Component 10 – 1.png" alt="plus">
+                                </div>
+                                <div>
+                                    <img src="images/icons/Component 6 – 2.png" alt="heart">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex load-button-div">
+                        <button>Load more</button>
+                    </div>
+                </section>
+            </main>
         </div>
     </div>
 </body>
