added second section and styles on index.html

--- a/index.html
+++ b/index.html
@@ -12,34 +12,34 @@
     <div class="container-page flex">
         <aside class="aside-div">
             <div class="flex justify-around div-logo">
-                <a class="logo transition-property" href="index.html"><span>design.</span>today</a>
+                <a class="logo colorfff transition-property" href="index.html"><span>design.</span>today</a>
                 <a href="#"><img src="images/icons/burger-icon.png" alt="burger-icon"></a>
             </div>
             <div class="container-aside">
                 <nav>
                     <ul>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
+                            <a class="font-fam-medium colorfff size16"href="#">
                                  <img class="vertical-align"src="images/icons/home.png" alt="home">Home
                             </a>
                         </li>
                         <li class="nav-li">
-                           <a class="medium-size16-colorfff"href="#">
+                           <a class="font-fam-medium colorfff size16"href="#">
                                <img class="vertical-align"src="images/icons/explore.png" alt="explore">Explore
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
+                            <a class="font-fam-medium colorfff size16"href="#">
                                <img class="vertical-align"src="images/icons/folders1.png" alt="folder">Folders
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
+                            <a class="font-fam-medium colorfff size16"href="#">
                                <img class="vertical-align"src="images/icons/favourites1.png" alt="favourites">Favourites
                             </a>
                         </li>
                         <li class="nav-li">
-                            <a class="medium-size16-colorfff"href="#">
+                            <a class="font-fam-medium colorfff size16"href="#">
                                <img class="vertical-align"src="images/icons/activities1.png" alt="avtivites">Activites
                             </a>
                         </li>
@@ -47,35 +47,35 @@
                 </nav>
             </div>
             <div class="aside-bottom container-aside">
-                <h3 class="uppercase">following</h3>
+                <h3 class="uppercase colorfff font-fam-heavy">following</h3>
                 <ul>
                    <li>
-                       <a class="medium-size16-colorfff" href="#">
+                       <a class="font-fam-medium colorfff size16" href="#">
                            <img class="vertical-align" src="images/persons/sajon.png" alt="sajon">Sajon
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
+                       <a class="font-fam-medium colorfff size16"href="#">
                            <img class="vertical-align"src="images/persons/tran-mau.png" alt="tran">Tran Mau Tri Tam
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
+                       <a class="font-fam-medium colorfff size16"href="#">
                            <img class="vertical-align"src="images/persons/ghani.png" alt="ghani">Ghani Pradita
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
+                       <a class="font-fam-medium colorfff size16"href="#">
                            <img class="vertical-align"src="images/persons/david.png" alt="david">David Kovalev
                         </a>
                     </li>
                    <li>
-                       <a class="medium-size16-colorfff"href="#">
+                       <a class="font-fam-medium colorfff size16"href="#">
                            <img class="vertical-align"src="images/persons/ryan.png" alt="ryan">Ryan Putnam
                         </a>
                     </li>
                 </ul>
-                <button>loadmore (15)</button>
+                <button class="colorfff font-size14 font-fam-heavy">loadmore (15)</button>
             </div>
         </aside>
         <div class="main-page">
@@ -95,12 +95,12 @@
                        <a href="#"><img src="images/icons/bell.png" alt="bell"><span></span></a>
                     </div>
                     <a href="sec-page.html"><img src="images/persons/Group 33.png" alt="photo"> </a>
-                    <button class="uppercase upload">upload</button>
+                    <button class="uppercase upload colorfff font-size14 font-fam-heavy">upload</button>
                 </div>
             </header>
             <main>
                 <section class="container">
-                    <div class="flex jc-between ai-center"> 
+                    <div class="flex jc-between ai-center wrap"> 
                         <div class="flex">
                             <div class="list-div">
                                 <a class="book-size16-color222 capitalize"href="">all</a>
@@ -135,60 +135,165 @@
                                 <img class="main-img"src="images/basic images/UI components for unity gaming.png" alt="">
                                 <h4>UI Components for Unity Gaming</h4>
                             </a>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
+                            </div>
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
                                 <img src="images/basic images/Analytics mobile app.png" alt="">
                                 <h4>Analytics Mobile App – Blurr Series</h4>
                             </a>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
+                            </div>
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
                                 <img src="images/basic images/estaro dark-mode.png" alt="">
                                 <h4>Estaro – Dark-mode – Task Management App</h4>
                             </a>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
+                            </div>
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
                                 <img class="main-img"src="images/basic images/live streaming.png" alt="">
                                 <h4>Live streaming application for gamers.</h4>
                             </a>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
+                            </div>
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
                                 <img src="images/basic images/dark mockup.png" alt="">
                                 <h4>Dark Mockup for Unity Gaming</h4>
                             </a>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
+                            </div>
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
                                 <img src="images/basic images/smm-social media managment.png" alt="">
                                 <h4>SMM – Social Media Management – App UI</h4>
                             </a>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
+                            </div>
                         </div>
                         <div class="main-img-div flex wrap relative">
                             <a href="#">
                                 <img src="images/basic images/food app.png" alt="">
                                 <h4>Food App 2.0</h4>
                             </a>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
+                            </div>
                         </div>
                         <div class="main-img-div  flex wrap relative">
                             <a href="#">
-                                <img src="images/basic images/live straming application for gamers.png" alt="">
+                                <img src="images/basic images/Rectangle 48@2x.png" alt="">
                                 <h4>Live streaming application for gamers.</h4>
                             </a>
-                            <div class="icon-on-imgdiv flex">
-                                <div>
-                                    <img src="images/icons/Component 10 – 1.png" alt="plus">
-                                </div>
-                                <div>
-                                    <img src="images/icons/Component 6 – 2.png" alt="heart">
-                                </div>
+                            <div class="icon-on-imgdiv">
+                                <img src="images/icons/Component 10 – 1.png" alt="plus">
+                            </div>
+                            <div class="icon-on-imgdiv heart-icon">
+                                <img src="images/icons/Component 6 – 2.png" alt="heart">
                             </div>
                         </div>
                     </div>
                     <div class="flex load-button-div">
                         <button>Load more</button>
+                    </div>
+                </section>
+                <section class="designer-section">
+                    <div class="container">
+                        <div class="flex jc-between">
+                            <h2>Top Designers</h2>
+                            <a class="color222 font-fam-heavy font-size14"href="#">View all</a>
+                        </div>
+                        <div class="flex jc-between">
+                            <div class=" flex personal-div">
+                                <img src="images/persons/tran-mau.png" alt="">
+                                <h3>Tran Mau</h3>
+                                <h3>Tri Tam</h3>
+                                <p>Sai Gon, Vietnam</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                            <div class="flex personal-div">
+                                <img src="images/persons/ghulam.png" alt="">
+                                <h3>Ghulam</h3>
+                                <h3>Rasool</h3>
+                                <p>Dubai</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                            <div class="flex personal-div">
+                                <img src="images/persons/zhenya.png" alt="">
+                                <h3>Zhenya</h3>
+                                <h3>Rynzhuk</h3>
+                                <p>New York City, NY</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                            <div class="flex personal-div">
+                                <img src="images/persons/ghani.png" alt="">
+                                <h3>Ghani</h3>
+                                <h3>Pradita</h3>
+                                <p>Yogyakarta, Indonesia</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                            <div class="flex personal-div">
+                                <img src="images/persons/sajon.png" alt="">
+                                <h3>Sajon</h3>
+                                <p>Earth</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                            <div class="flex personal-div">
+                                <img src="images/persons/david.png" alt="">
+                                <h3>David</h3>
+                                <h3>Kovalev</h3>
+                                <p>Sarasota, FL</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                            <div class="flex personal-div">
+                                <img src="images/persons/ryan.png" alt="">
+                                <h3>Ryan</h3>
+                                <h3>Putnam</h3>
+                                <p>Colorado Springs</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                            <div class="flex personal-div">
+                                <img src="images/persons/dmitry.png" alt="">
+                                <h3>Dmitry</h3>
+                                <h3>Lauretsky</h3>
+                                <p>Omsk, Russia</p>
+                                <button class="font-size14 font-fam-heavy">follow</button>
+                            </div>
+                        </div>
                     </div>
                 </section>
             </main>
