add table section

--- a/sec-page.html
+++ b/sec-page.html
@@ -101,7 +101,94 @@
                 </div>
             </header>
             <main>
-                <section></section>
+                <section>
+                    <table class="container">
+                        <thead>
+                            <tr class="flex">
+                                <th>Date</th>
+                                <th>Order ID</th>
+                                <th>Name</th>
+                                <th>Price</th>
+                                <th>Quantity</th>
+                                <th>Total</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                            <tr class="info-table flex">
+                                <td>2020-09-29 95:57</td>
+                                <td>200398</td>
+                                <td>iPhone X 64Gb Grey</td>
+                                <td>$ 999.00</td>
+                                <td>1</td>
+                                <td>$ 999.00</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </section>
                 <footer>
                     <div class="container flex wrap jc-between footer-page">
                         <div>
