--- a/sec-page.html
+++ b/sec-page.html
@@ -109,7 +109,7 @@
                 </div>
             </header>
             <main>
-                <section>
+                <section class="table-section">
                     <table class="container">
                         <thead>
                             <tr class="flex">
